# luna

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  example.luna  notes.txt  run_tests.sh  syntax.luna  test.luna
editor/vscode/: package.json  vsc-extension-quickstart.md
editor/vscode/syntaxes/: luna.tmLanguage.json
examples/: 00_hello_world.luna  01_basics.luna  02_arrays.luna  02_functions.luna  03_arrays.luna  10_arrays.luna  10_fibonacci.luna  20_fibonacci.luna  basic.luna  http.luna  http_server.luna  syntax.luna
lib/std/: http.luna  net.luna
scripts/: run-tests.ps1  run_tests.sh
src/: builtins.rs  lib.rs  main.cpp  main.rs  types.rs
src/compiler/: ast.cpp  ast.h  ast.rs  checker.rs  emit.rs  gen.cpp  gen.h  generate.rs  lexer.cpp  lexer.h  mangle.rs  mod.rs  parser.cpp  parser.h  parser.rs  sema.cpp  sema.h  sema.rs  source.rs  token.rs  tokeniser.rs
src/ir/: builder.rs  iter.rs  mod.rs
src/runtime/: builtins.cpp  builtins.h  bytecode.cpp  bytecode.h  gc.h  gc.rs  heap.cpp  heap.h  mod.rs  runtime.cpp  runtime.h  stack_roots.rs  string.rs  translate.rs  unused.rs  value.cpp  value.h
src/shared/: builder.cpp  builder.h  environment.cpp  environment.h  error.cpp  error.h  stack.h  type.cpp  type.h  utils.cpp  utils.h
tests/: arrays.luna  basic_if.luna  basic_types.luna  decl_struct.luna  expr_assignments.luna  expr_binary.luna  expr_call.luna  expr_literals.luna  stmt_if.luna  stmt_variables.luna  test_lexer.cpp  test_parser.cpp  test_runtime.cpp  test_self.cpp  test_self.luna  test_sema.cpp  testing.h
tests/failure/: assertion_failure.luna  division_by_zero.luna  expr_template_invalid_array_type.luna  expr_template_invalid_interface_type.luna  expr_template_invalid_struct_type.luna  interface_cannot_cast.luna  interface_method_call_arg_type.luna  interface_method_signature_mismatch.luna  interface_missing_method.luna  invalid_binary_op.luna  missing_return.luna  no_main_function.luna  stmt_const_reassign.luna  stmt_const_reassign_chain.luna  stmt_switch_invalid_type.luna  struct_assign_nonexistent_field.luna  struct_constructor_syntax.luna  struct_duplicate_fields.luna  struct_extra_field.luna  struct_field_type_mismatch.luna  struct_incomplete_nesting.luna  struct_method_called_on_type.luna  struct_method_called_with_instance_argument.luna  struct_method_missing.luna  struct_missing_field.luna  struct_read_nonexistent_field.luna  struct_self_outside_method.luna  struct_undefined_type.luna  struct_wrong_type_parameter.luna  syntax_error.luna  type_mismatch.luna  undefined_struct_field.luna  undefined_variable.luna  wrong_arg_count.luna
tests/success/: arrays.luna  decl_struct.luna  enum_basics.luna  expr_array_length.luna  expr_literals.luna  expr_slices.luna  expr_string_compare.luna  expr_templates.luna  expr_templates_string_interface.luna  interface_basics.luna  interface_empty_interface.luna  interface_multiple_methods.luna  returning_from_while.luna  stmt_const_bindings.luna  stmt_switch.luna  stmt_switch_enums.luna  stmt_switch_int_range.luna  stmt_while.luna  struct_basics.luna  struct_functions.luna  struct_methods.luna  struct_methods_nested.luna  struct_methods_self_calls.luna  struct_nesting.luna  underscore_identifiers.luna
(+8 files in other folders)
