[package]
name = "luna-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-codegen = "0.125.3"
cranelift-frontend = "0.125.3"
cranelift-jit = "0.125.3"
cranelift-module = "0.125.3"
itertools = "0.14.0"
libc = "0.2.177"
smallvec = "1.15.1"
target-lexicon = "0.13.3"
wasmparser = "0.239.0"
wasmtime-environ = "37.0.2"
