[package]
name = "luna-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
context = "3.0.0"
cranelift-codegen = "0.128.2"
cranelift-control = "0.128.2"
cranelift-entity = "0.128.2"
cranelift-frontend = "0.128.2"
# cranelift-jit = "0.128.2"
# cranelift-module = "0.128.2"
cranelift-native = "0.128.2"
itertools = "0.14.0"
libc = "0.2.177"
region = "3.0.2"
smallvec = "1.15.1"
target-lexicon = "0.13.3"
wasmparser = "0.239.0"
wasmtime-environ = "37.0.2"
wasmtime-jit-icache-coherence = "34.0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]}
